--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,14 @@ PORT=3333
 TYPEORM_LOGGING=true
 
 # DATABASE
-DB_HOST=atividade_postgres
+DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=postgres
 DB_PORT=5432
 
 # DATABASE-TEST
-DB_HOST_TEST=atividade_postgres_test
+DB_HOST_TEST=localhost
 DB_USER_TEST=postgres
 DB_PASS_TEST=postgres
 DB_NAME_TEST=postgres
