--- a/package.json
+++ b/package.json
@@ -24,11 +24,21 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.2.4",
     "@nestjs/typeorm": "^8.0.2",
-    "class-transformer": "^0.5.1",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "0.4.0",
     "class-validator": "^0.13.2",
+    "faker": "^5.5.3",
+    "jest-mock-extended": "^2.0.4",
+    "mockdate": "^3.0.5",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -39,9 +49,13 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -59,20 +73,37 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^~/(.*)$": "<rootDir>/src/$1"
+    },
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/**/**/**.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/migrations/",
+      "<rootDir>/src/common/entities",
+      "<rootDir>/src/common/filters",
+      "<rootDir>/src/config/",
+      "<rootDir>/src/common/interceptors",
+      "<rootDir>/src/common/middlewares",
+      "<rootDir>/src/common/utils/create-log.ts",
+      "<rootDir>/src/main.ts",
+      "index.ts"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
+    "roots": [
+      "<rootDir>/test",
+      "<rootDir>/src"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "coverage",
     "testEnvironment": "node"
   }
 }
